manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo-app
  namespace: devops-course
  labels:
    app: devops-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-demo-app
  template:
    metadata:
      labels:
        app: devops-demo-app
    spec:
      containers:
        - name: gitops-sentiment-demo
          # Replace latest with main-<commit-sha> for immutable releases.
          image: ghcr.io/renzoal7/gitops-sentiment-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
