manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-service
  namespace: devops-course
spec:
  type: ClusterIP
  selector:
    app: devops-demo-app
  ports:
    - port: 80
      targetPort: 80
