manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-ingress
  namespace: devops-course
spec:
  rules:
    - http:
        paths:
          - path: /devops
            pathType: Prefix
            backend:
              service:
                name: devops-demo-service
                port:
                  number: 80
